assets/css/styles.css
/* ... */
#content-wrapper {
    /* padding-bottom: 100px; */
    display: flex;
    flex-direction: column;
}

#container-header {
    width: var(--container-width);
    margin: auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 100%;
}

main {
    display: flex;
    align-items: center;
    justify-content: center;
    height: calc(var(--unit-100vh) - 200px);
    overflow-y: scroll;
    overflow-x: hidden;
    /* MINUS FOOTER HEIGHT */
    /* border: 2px solid red; */
    /* align-items: stretch; */
}

#container-content {
    width: var(--container-width);
    margin: auto;
    height: 100%;
    display: flex;
    align-items: center;
    position: relative;
}

#nav-logo {
    font: 3em var(--font-family-header)
}

#nav-logo a {
    text-decoration: none;
    color: var(--colour-white);
}

/* nav {
    width: 30%;
} */

nav ul {
    display: flex;
    justify-content: space-between;
    list-style: none;
    font: 1.5em var(--font-family-header);
    gap: 35px;
    /* width: 500px; */
}

nav a {
    text-decoration: none;
    color: var(--colour-white);
}

.active-page {
    text-decoration: underline;
    text-underline-offset: 12px;
}

footer {
    height: 100px;
    width: 100%;
    position: absolute;
    bottom: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    background-image: linear-gradient(180deg, var(--colour-primary-teal-gradient));
}

#map {
    height: 90%;
    width: 100%;
    /* border: 1px solid black; */
    border-radius: 0px 20px 20px 0px;
}

#content-underlay {
    width: 100%;
    height: 90%;
    /* border: 5px solid red; */
    position: absolute;
    z-index: -1;
    box-shadow: 0px 4px 12px 2px rgba(0, 0, 0, 0.25);
    border-radius: 20px;
}

#search-container {
    height: 90%;
    width: 40%;
    max-width: 350px;
    min-width: 200px;
    padding: 15px;
    /* border: 1px solid red; */
    display: flex;
    flex-direction: column;
}

#search-container-head {
    padding-bottom: 10px;
    /* margin-bottom: 10px; */
    border-bottom: 1px solid #cecece;
    box-shadow: 0px 10px 10px -10px #bdbdbd;
}

#search {
    height: 45px;
    width: 100%;
    border-radius: 100px;
    border: 1px solid var(--colour-primary-teal);
    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.18);
    padding-inline: 15px;
    font-size: 16px;
    margin-bottom: 5px;
}

#search.search-invalid {
    outline: 1px solid #cd0000;
    border: none;
}

#search.search-invalid:focus-visible {
    outline: 2px solid #cd0000;
    border: none;
}

#search:focus-visible {
    outline: 2px solid var(--colour-primary-teal);
}

#search-error-message {
    font-family: var(--font-family-Body);
    font-size: 12px;
    color: #cd0000;
}

footer {
    display: flex;
    flex-direction: column;
}

.license-disclaimer {
    font-family: var(--font-family-Body);
    font-size: 0.8em;
    color: #3b3b3b;
    margin-top: 20px;
    text-align: center;
}

.footer-icon {
    height: 35px;
}

footer a {
    margin-inline: 15px;
}

#drawer-chevron-container {
    display: none;
}

#search-container-results {
    /* height: inherit; */
    overflow-y: scroll;
    overflow-x: hidden;
    align-items: stretch;
    border-bottom: 1px solid #cecece;
}

.attractionListInfoDiv {
    font: 14px var(--font-family-Body);
    padding: 15px 5px;
    border-bottom: 1px solid #cecece;
}

.info-window-content-container {
    padding: 5px;
}

h4 {
    font: 16px var(--font-family-header);
    color: var(--colour-primary-teal);
}

.attraction-info-button-container {
    display: flex;
    flex-direction: row;
    /* margin: 5px; */
    /* background-color: red; */
}

a.attraction-info-button {
    text-decoration: none;
    color: var(--colour-primary-teal);
    background-color: #f6f6f6;
    /* border: 1px solid magenta; */
    width: 30px;
    height: 30px;
    /* display: inline-block; */
    border-radius: 100px;
    margin-right: 10px;
    margin-top: 10px;
    box-shadow: 0px 1px 4px 1px #cecece;
    display: flex;
    justify-content: center;
    align-items: center;
    /* flex-direction: ; */
}

div a.attraction-info-button.grey {
    color: #cecece;
    /* background-color: #cecece; */
}

.modal-overlay {
    width: 100%;
    height: 100%;
    background-color: #000;
    opacity: 0.1;
    position: absolute;
    top: 0;
    left: 0;
    display: none;
    z-index: 980;
}

.modal-container {
    width: 100%;
    height: 100%;
    z-index: 990;
    display: none;
    justify-content: center;
    align-items: center;
    position: absolute;
    top: 0;
    left: 0;
}

.first-visit-modal {
    width: min(70%, 500px);
    max-height: 70%;
    background-color: var(--colour-white);
    border: 2px solid var(--colour-primary-teal);
    display: none;
    z-index: 999;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border-radius: 20px;
    box-shadow: 0px 4px 12px 2px rgba(0, 0, 0, 0.25);
    padding: 40px 20px;
    opacity: 0.01;
    transition: opacity 0.5s;
}

.decorative-line-break {
    width: 30px;
    border: 1px solid var(--colour-primary-teal);
    border-radius: 100px;
    margin: 15px 0;
}

#modal-cta-container {
    display: flex;
    gap: 10px;
    flex-direction: column;
}

.primary-cta {
    font-family: var(--font-family-header);
    font-size: 1.25em;
    text-decoration: none;
    color: var(--colour-white);
    background-image: linear-gradient(180deg, var(--colour-primary-teal-gradient));
    box-shadow: 0px 4px 12px 2px rgba(0, 0, 0, 0.25);
    padding: 7px 25px;
    border-radius: 100px;
    /* min-width: 40%; */
    text-align: center;
}

.secondary-cta {
    color: var(--colour-primary-teal);
    background-color: var(--colour-white);
    border: 1px solid var(--colour-primary-teal);
    background-image: none;
}

.modal-container-visible {
    display: flex;
}

.modal-visible {
    display: flex;
    opacity: 1;
}

.modal-overlay-visible {
    display: block;
    opacity: 0.4;
}
/* ... */

